[package]
name = "akashi"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = { version = "1.0" }
actix-web = "2.0"
failure = "0.1"
futures = "0.3"
