[package]
name = "akashi-example"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akashi = { path = "../akashi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
actix-web = "2.0"
actix-rt = "1.0"
