[package]
name = "akashi"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
failure_derive = "0.1"
downcast-rs = "1.1"
chashmap = "2.2"
rental = "0.5"
stable_deref_trait = "1.1"