[package]
name = "akashi"
license = "MIT"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"
description = "A framework for building collectible card games and gacha games."
homepage = "https://github.com/stmobo/akashi"
repository = "https://github.com/stmobo/akashi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
failure_derive = "0.1"
downcast-rs = "1.1"
chashmap = "2.2"
rental = "0.5"
stable_deref_trait = "1.1"