[package]
name = "akashi"
license = "MIT"
version = "0.5.2"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"
description = "A framework for building collectible card games and gacha games."
homepage = "https://github.com/stmobo/akashi"
repository = "https://github.com/stmobo/akashi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
failure_derive = "0.1"
downcast-rs = "1.1"
dashmap = "2.1"
rental = "0.5"
stable_deref_trait = "1.1"
parking_lot = "0.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
rayon = "1.3"
num_cpus = "1"
crossbeam = "0.7"

[[bench]]
name = "store"
harness = false